--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+#spring.data.web.pageable.page-parameter=pagina
+#spring.data.web.pageable.size-parameter=tamanho
+#spring.data.web.sort.sort-parameter=ordem
