--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=root
+server.error.include-stacktrace=never
 
 
 #spring.data.web.pageable.page-parameter=pagina
