--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.error.include-stacktrace=never
 
+api.security.token.secret = vollmed
+
 
 #spring.data.web.pageable.page-parameter=pagina
 #spring.data.web.pageable.size-parameter=tamanho
